--- a/package.json
+++ b/package.json
@@ -1,20 +1,29 @@
 {
-  "name": "courses-app",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vue-tsc && vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "vue": "^3.2.45"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-vue": "^4.0.0",
-    "typescript": "^4.9.3",
-    "vite": "^4.1.0",
-    "vue-tsc": "^1.0.24"
-  }
+	"name": "courses-app",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "vue-tsc && vite build",
+		"preview": "vite preview"
+	},
+	"dependencies": {
+		"vue": "^3.2.45"
+	},
+	"devDependencies": {
+		"@typescript-eslint/eslint-plugin": "^5.52.0",
+		"@typescript-eslint/parser": "^5.52.0",
+		"@vitejs/plugin-vue": "^4.0.0",
+		"autoprefixer": "^10.4.13",
+		"eslint": "^8.34.0",
+		"eslint-plugin-vue": "^9.9.0",
+		"postcss": "^8.4.21",
+		"prettier": "^2.8.4",
+		"tailwindcss": "^3.2.6",
+		"typescript": "^4.9.3",
+		"vite": "^4.1.0",
+		"vue-eslint-parser": "^9.1.0",
+		"vue-tsc": "^1.0.24"
+	}
 }
