--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,4 +30,4 @@ jobs:
     # - run: npm ci
     - run: yarn install --frozen-lockfile
     - run: yarn run build
-    - run: yarn run test
+    # - run: yarn run test
