--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@tanstack/vue-query": "^4.24.9",
 		"swiper": "^9.0.5",
 		"vue": "^3.2.45",
 		"vue-router": "^4.1.6"
