--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	},
 	"dependencies": {
 		"@tanstack/vue-query": "^4.24.9",
+		"axios": "^1.3.3",
 		"swiper": "^9.0.5",
 		"vue": "^3.2.45",
 		"vue-router": "^4.1.6"
