--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"typescript": "^4.9.3",
 		"vite": "^4.1.0",
 		"vue-eslint-parser": "^9.1.0",
-		"vue-tsc": "^1.0.24"
+		"vue-tsc": "^1.0.24",
+		"zod": "^3.20.6"
 	}
 }
